--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+html {
+  width: 100%;
+  height: 100%;
+}
 .App {
+  width: 100%;
+  height: 100%;
+}
+
+.CalculatorContainer {
+  position: absolute;
+  top: 20%;
+  left: 40%;
+  background-color: black;
+}
+
+.DisplayContainer {
+  flex: auto;
+  flex-direction: row;
+}
+
+/* button {
+  border: none;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 15px 32px;
   text-align: center;
-}
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.operatorbuttons {
+  border: none;
+  background-color: #df5018fb;
   color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px;
 }
+/* 
+input {
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px;
+} */
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonBackgroundGray {
+  background-color: #c1c4c736;
+  color: #fff;
+  font-weight: 400;
 }
